[JAVA8]
refatorações para java 8.